# meirifupan

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: README.md  quantzz_token.example.json  settings.example.yaml  token.example.json
docs/: README.md  configuration.md  daily-review-tech.md  data-storage.md  fuyao-data-integration-plan.md  quantzz-clone-product-tech-data-plan.md  quantzz-site-module-map.md  review-module-data-feasibility.md  review-module-development-standards.md  review-module-implementation-spec.md  review-module-progress-2026-06-25.md  setup-guide.md
docs/plans/: 2026-06-24-premarket-agent.md  (+3 more)
scripts/: auto_review.sh  git_sync.sh
server/: main.py  requirements.txt
src/: agent_assistant.py  agent_review.py  daily_scheduler.py  daily_update.py  data_server.py  db.py  db_inventory.py  derive_review_data.py  derive_shortline_hot.py  fetch_daily_review.py  fetch_hot.py  fetch_market_overview.py  fetch_missing_data.py  fetch_plate_index_daily.py  fetch_plate_rotation.py  fetch_premarket.py  fetch_ths_hot.py  fetch_uplimit.py  fuyao_client.py  fuyao_collect.py  fuyao_limit_up.py  generate_premarket.py  generate_review.py  news_update.py  premarket_analysis.py  research_report_update.py  research_reports.py  stock_agent_server.py  utils.py
tests/: test_announcements.py  test_auth.py  test_fuyao_client.py  test_fuyao_limit_up.py  test_market_db.py  test_news_queries.py  test_premarket_analysis.py  test_realtime_emotion.py  test_research_reports.py  test_review_module.py
web/: package.json
(+61 files in other folders)
